--- a/styles/prism-dracula.css
+++ b/styles/prism-dracula.css
@@ -20,306 +20,299 @@ http://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javascr
 
 pre::-webkit-scrollbar {
     width: 14px;
-  }
-  
-  pre::-webkit-scrollbar-track {
+}
+
+pre::-webkit-scrollbar-track {
     background-color: #6272a4;
     border-radius: 0px;
-  }
-  
-  pre::-webkit-scrollbar-thumb {
+}
+
+pre::-webkit-scrollbar-thumb {
     background-color: #bd93f9;
     border-radius: 0px;
-  }
-  
-  code[class*="language-"],
-  pre[class*="language-"] {
+}
+
+code[class*='language-'],
+pre[class*='language-'] {
     color: #ccc;
     background: rgb(40, 41, 54);
     text-shadow: none;
-    font-family: PT Mono, Consolas, Monaco, "Andale Mono", "Ubuntu Mono",
-      monospace;
+    font-family: PT Mono, Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
     text-align: left;
     white-space: pre;
     word-spacing: normal;
     word-break: normal;
     word-wrap: normal;
     line-height: 1.5;
-  
+
     -moz-tab-size: 4;
     -o-tab-size: 4;
     tab-size: 4;
-  
+
     -webkit-hyphens: none;
     -moz-hyphens: none;
     -ms-hyphens: none;
     hyphens: none;
-  }
-  
-  pre[class*="language-"]::-moz-selection,
-  pre[class*="language-"] ::-moz-selection,
-  code[class*="language-"]::-moz-selection,
-  code[class*="language-"] ::-moz-selection {
+}
+
+pre[class*='language-']::-moz-selection,
+pre[class*='language-'] ::-moz-selection,
+code[class*='language-']::-moz-selection,
+code[class*='language-'] ::-moz-selection {
     text-shadow: none;
     background-color: #5a5f80;
-  }
-  
-  pre[class*="language-"]::selection,
-  pre[class*="language-"] ::selection,
-  code[class*="language-"]::selection,
-  code[class*="language-"] ::selection {
+}
+
+pre[class*='language-']::selection,
+pre[class*='language-'] ::selection,
+code[class*='language-']::selection,
+code[class*='language-'] ::selection {
     text-shadow: none;
     background-color: #5a5f80;
-  }
-  
-  @media print {
-    code[class*="language-"],
-    pre[class*="language-"] {
-      text-shadow: none;
+}
+
+@media print {
+    code[class*='language-'],
+    pre[class*='language-'] {
+        text-shadow: none;
     }
-  }
-  
-  /* Code blocks */
-  pre[class*="language-"] {
+}
+
+/* Code blocks */
+pre[class*='language-'] {
     background: rgba(40, 41, 54, 1) !important;
     border-radius: 0.5em;
     padding: 1em;
     margin: 0.5em 0;
     overflow: auto;
     height: auto;
-  }
-  
-  :not(pre) > code[class*="language-"],
-  pre[class*="language-"] {
+}
+
+:not(pre) > code[class*='language-'],
+pre[class*='language-'] {
     background: rgba(40, 41, 54, 1);
-  }
-  
-  /* Inline code */
-  :not(pre) > code[class*="language-"] {
+}
+
+/* Inline code */
+:not(pre) > code[class*='language-'] {
     padding: 4px 7px;
     border-radius: 0.3em;
     white-space: normal;
-  }
-  
-  .limit-300
-  {
+}
+
+.limit-300 {
     height: 300px !important;
-  }
-  
-  .limit-400
-  {
+}
+
+.limit-400 {
     height: 400px !important;
-  }
-  
-  .limit-500
-  {
+}
+
+.limit-500 {
     height: 500px !important;
-  }
-  
-  .limit-600
-  {
+}
+
+.limit-600 {
     height: 600px !important;
-  }
-  
-  .limit-700
-  {
+}
+
+.limit-700 {
     height: 700px !important;
-  }
-  
-  .limit-800
-  {
+}
+
+.limit-800 {
     height: 800px !important;
-  }
-  
-  .token.comment {
+}
+
+.token.comment {
     color: rgba(98, 114, 164, 1);
-  }
-  
-  .token.prolog {
+}
+
+.token.prolog {
     color: rgba(207, 207, 194, 1);
-  }
-  
-  .token.tag {
+}
+
+.token.tag {
     color: rgba(220, 104, 170, 1);
-  }
-  
-  .token.entity {
+}
+
+.token.entity {
     color: rgba(139, 233, 253, 1);
-  }
-  
-  .token.atrule {
+}
+
+.token.atrule {
     color: rgba(98, 239, 117, 1);
-  }
-  
-  .token.url {
+}
+
+.token.url {
     color: rgba(102, 217, 239, 1);
-  }
-  
-  .token.selector {
+}
+
+.token.selector {
     color: rgba(207, 207, 194, 1);
-  }
-  
-  .token.string {
+}
+
+.token.string {
     color: rgba(241, 250, 140, 1);
-  }
-  
-  .token.property {
+}
+
+.token.property {
     color: rgba(255, 184, 108, 1);
-  }
-  
-  .token.important {
+}
+
+.token.important {
     color: rgba(255, 121, 198, 1);
     font-weight: bold;
-  }
-  
-  .token.punctuation {
+}
+
+.token.punctuation {
     color: white;
-  }
-  
-  .token.number {
+}
+
+.token.number {
     color: rgba(189, 147, 249, 1);
-  }
-  
-  .token.function {
+}
+
+.token.function {
     color: rgba(80, 250, 123, 1);
-  }
-  
-  .token.class-name {
+}
+
+.token.class-name {
     color: rgba(255, 184, 108, 1);
-  }
-  
-  .token.keyword {
+}
+
+.token.keyword {
     color: rgba(255, 121, 198, 1);
-  }
-  
-  .token.boolean {
+}
+
+.token.boolean {
     color: rgba(255, 184, 108, 1);
-  }
-  
-  .token.operator {
+}
+
+.token.operator {
     color: rgba(139, 233, 253, 1);
-  }
-  
-  .token.char {
+}
+
+.token.char {
     color: rgba(255, 135, 157, 1);
-  }
-  
-  .token.regex {
+}
+
+.token.regex {
     color: rgba(80, 250, 123, 1);
-  }
-  
-  .token.variable {
+}
+
+.token.variable {
     color: rgba(80, 250, 123, 1);
-  }
-  
-  .token.constant {
+}
+
+.token.constant {
     color: rgba(255, 184, 108, 1);
-  }
-  
-  .token.symbol {
+}
+
+.token.symbol {
     color: rgba(255, 184, 108, 1);
-  }
-  
-  .token.builtin {
+}
+
+.token.builtin {
     color: rgba(255, 121, 198, 1);
-  }
-  
-  .token.attr-value {
+}
+
+.token.attr-value {
     color: #7ec699;
-  }
-  
-  .token.deleted {
+}
+
+.token.deleted {
     color: #e2777a;
-  }
-  
-  .token.namespace {
+}
+
+.token.namespace {
     color: #e2777a;
-  }
-  
-  .token.bold {
+}
+
+.token.bold {
     font-weight: bold;
-  }
-  
-  .token.italic {
+}
+
+.token.italic {
     font-style: italic;
-  }
-  
-  .token {
+}
+
+.token {
     color: #ff79c6;
-  }
-  
-  .language-cpp .token.string {
+}
+
+.language-cpp .token.string {
     color: #8be9fd;
-  }
-  
-  .language-c .token.string {
+}
+
+.language-c .token.string {
     color: #8be9fd;
-  }
-  
-  .language-css .token.selector {
+}
+
+.language-css .token.selector {
     color: rgba(80, 250, 123, 1);
-  }
-  
-  .language-css .token.property {
+}
+
+.language-css .token.property {
     color: rgba(255, 184, 108, 1);
-  }
-  
-  .language-java span.token.class-name {
+}
+
+.language-java span.token.class-name {
     color: #8be9fd;
-  }
-  
-  .language-java .token.class-name {
+}
+
+.language-java .token.class-name {
     color: #8be9fd;
-  }
-  
-  .language-markup .token.attr-value {
+}
+
+.language-markup .token.attr-value {
     color: rgba(102, 217, 239, 1);
-  }
-  
-  .language-markup .token.tag {
+}
+
+.language-markup .token.tag {
     color: rgba(80, 250, 123, 1);
-  }
-  
-  .language-objectivec .token.property {
+}
+
+.language-objectivec .token.property {
     color: #66d9ef;
-  }
-  
-  .language-objectivec .token.string {
+}
+
+.language-objectivec .token.string {
     color: #50fa7b;
-  }
-  
-  .language-php .token.boolean {
+}
+
+.language-php .token.boolean {
     color: #8be9fd;
-  }
-  
-  .language-php .token.function {
+}
+
+.language-php .token.function {
     color: #ff79c6;
-  }
-  
-  .language-php .token.keyword {
+}
+
+.language-php .token.keyword {
     color: #66d9ef;
-  }
-  
-  .language-ruby .token.symbol {
+}
+
+.language-ruby .token.symbol {
     color: #8be9fd;
-  }
-  
-  .language-ruby .token.class-name {
+}
+
+.language-ruby .token.class-name {
     color: #cfcfc2;
-  }
-  
-  pre.line-numbers {
+}
+
+pre.line-numbers {
     position: relative;
     padding-left: 3.8em;
     counter-reset: linenumber;
-  }
-  
-  pre.line-numbers > code {
+}
+
+pre.line-numbers > code {
     position: relative;
     white-space: inherit;
-  }
-  
-  .line-numbers .line-numbers-rows {
+}
+
+.line-numbers .line-numbers-rows {
     position: absolute;
     pointer-events: none;
     top: 0;
@@ -328,53 +321,53 @@ pre::-webkit-scrollbar {
     width: 3em; /* works for line-numbers below 1000 lines */
     letter-spacing: -1px;
     border-right: 1px solid #999;
-  
+
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-  }
-  
-  .line-numbers-rows > span {
+}
+
+.line-numbers-rows > span {
     pointer-events: none;
     display: block;
     counter-increment: linenumber;
-  }
-  
-  .line-numbers-rows > span:before {
+}
+
+.line-numbers-rows > span:before {
     content: counter(linenumber);
     color: #999;
     display: block;
     padding-right: 0.8em;
     text-align: right;
-  }
-  
-  div.code-toolbar {
+}
+
+div.code-toolbar {
     position: relative;
-  }
-  
-  div.code-toolbar > .toolbar {
+}
+
+div.code-toolbar > .toolbar {
     position: absolute;
     top: 0.3em;
     right: 0.2em;
     transition: opacity 0.3s ease-in-out;
     opacity: 0;
-  }
-  
-  div.code-toolbar:hover > .toolbar {
+}
+
+div.code-toolbar:hover > .toolbar {
     opacity: 1;
-  }
-  
-  div.code-toolbar > .toolbar .toolbar-item {
+}
+
+div.code-toolbar > .toolbar .toolbar-item {
     display: inline-block;
     padding-right: 20px;
-  }
-  
-  div.code-toolbar > .toolbar a {
+}
+
+div.code-toolbar > .toolbar a {
     cursor: pointer;
-  }
-  
-  div.code-toolbar > .toolbar button {
+}
+
+div.code-toolbar > .toolbar button {
     background: none;
     border: 0;
     color: inherit;
@@ -385,25 +378,25 @@ pre::-webkit-scrollbar {
     -webkit-user-select: none; /* for button */
     -moz-user-select: none;
     -ms-user-select: none;
-  }
-  
-  div.code-toolbar > .toolbar a,
-  div.code-toolbar > .toolbar button,
-  div.code-toolbar > .toolbar span {
+}
+
+div.code-toolbar > .toolbar a,
+div.code-toolbar > .toolbar button,
+div.code-toolbar > .toolbar span {
     color: #ccc;
     font-size: 0.8em;
     padding: 0.5em;
     background: rgba(98, 114, 164, 1);
     border-radius: 0.5em;
-  }
-  
-  div.code-toolbar > .toolbar a:hover,
-  div.code-toolbar > .toolbar a:focus,
-  div.code-toolbar > .toolbar button:hover,
-  div.code-toolbar > .toolbar button:focus,
-  div.code-toolbar > .toolbar span:hover,
-  div.code-toolbar > .toolbar span:focus {
+}
+
+div.code-toolbar > .toolbar a:hover,
+div.code-toolbar > .toolbar a:focus,
+div.code-toolbar > .toolbar button:hover,
+div.code-toolbar > .toolbar button:focus,
+div.code-toolbar > .toolbar span:hover,
+div.code-toolbar > .toolbar span:focus {
     color: inherit;
     text-decoration: none;
     background-color: var(--verde);
-  }
+}
